src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #ff5e57;
  --ifm-color-primary-dark: #ff3d35;
  --ifm-color-primary-darker: #ff2d24;
  --ifm-color-primary-darkest: #ef0a00;
  --ifm-color-primary-light: #ff7f79;
  --ifm-color-primary-lighter: #ff8f8a;
  --ifm-color-primary-lightest: #ffc0be;
  --ifm-code-font-size: 100%;
  --ifm-font-family-base: "sans-serif";
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

.theme-doc-sidebar-menu > li > a {
  /* font-weight: 700; */
  padding: 0.5rem 1rem;
  /* font-size: 1.1em; */
}


.friend-item {
  user-select: none;
  cursor: pointer;
  transition: all 0.3s;
  filter: brightness(0.7);
}

.friend-item:hover {
  filter: brightness(0.9);
}

.friend-item.current {
  filter: brightness(1);
}

.friend-item {
  height: 50px;
  width: 50px;
}

.friend-item img {
  height: 50px;
  width: 50px;
  border-radius: 20%;
}

.friend-item {
  margin: 3px 5px;
}

.friend-card-outer {
  position: relative;
  max-width: 350px;
}

.friend-card {
  animation: friend-card-fadein .3s;
}

@keyframes friend-card-fadein {
  from {
    opacity: 0;
    transform: translate(20px, 0);
  }
  to {
    opacity: 1;
    transform: translate(0, 0);
  }
}

@keyframes friend-card-fadeout {
  from {
    opacity: 1;
    transform: translate(0, 0);
  }
  to {
    opacity: 0;
    transform: translate(-20px, 0);
  }
}

.friend-card.fadeout {
  position: absolute;
  animation: friend-card-fadeout .3s;
  opacity: 0;
  pointer-events: none;
}

.friends {
  margin-top: 100px;
  margin-bottom: 100px;
  min-height: 650px;
}

.friend-list {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex-wrap: wrap;
  height: 600px;
}

.friend-columns {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
}

@media screen and (max-width: 600px) {
  .friends {
    margin-top: 50px;
    margin-bottom: 50px;
  }
  .friend-card-outer {
    max-width: 400px;
    margin: 20px;
  }
  .friend-list {
    flex-direction: row;
    height: initial;
    /* width: 400px; */
    margin: 20px;
  }
  .friend-columns {
    /* order: 1; */
    flex-direction: column;
    height: initial;
    align-items: center;
  }
  .friend-card-outer {
    /* order: 2; */
    min-height: 600px;
  }
}

